# forecasting_module

./: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
src/: main.py
src/app/: main.py
src/app/api/: routes_forecast.py
src/app/config/: db_config.py
src/app/models/: forecast.py  product_setting.py  sale.py
src/app/repositories/: forecast_entry_repository.py  forecast_repository.py  product_repository.py  product_setting_repository.py  sale_repository.py  sale_repository_repository.py
src/app/services/: forecast_service.py
src/app/usecases/generate_all_forecast/: usecase.py
src/app/usecases/generate_single_forecast/: usecase.py
src/forecasting_module/application/usecases/generate_single_forecast/: usecase.py
src/forecasting_module/config/: pool.py
src/forecasting_module/domain/entities/: forecast.py  forecast_entry.py  product.py  product_setting.py  prophet_model.py  prophet_model_config.py  sale.py
src/forecasting_module/domain/services/: forecast_manager.py
src/forecasting_module/infra/database/repositories/: __init__.py  forecast_entry_repo.py  forecast_repo.py  product_repo.py  product_setting_repo.py  prophet_model_repo.py  sale_repo.py
src/forecasting_module/infra/web/: app.py
src/forecasting_module/infra/web/forecasts/: forecast_router.py
src/forecasting_module/infra/web/forecasts/dto/generate_single_forecast/: __init__.py  body.py
