[project]
name = "forecasting-module"
version = "0.1.0"
description = ""
authors = [
    {name = "PurelyForCode",email = "purelyforcode@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "prophet (>=1.1.7,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "uuid-utils (>=0.11.0,<0.12.0)",
]

[tool.poetry]
packages = [{include = "forecasting_module", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
